--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,9 +7,8 @@ env:
 
 phases:
   install:
-    runtime-versions:
-      docker: 20
     commands:
+      - echo "Starting Docker setup..."
       - echo "Logging in to Docker Hub..."
       - echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
 
