--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,11 +4,17 @@ env:
   variables:
     DOCKER_USERNAME: "channa316"  # Docker Hub username
     DOCKER_PASSWORD: "3ezvNbGcG8EhF$m"  # Docker Hub password
+    CLUSTER_NAME: "meditrack-cluster"  # Name of the EKS cluster
+    REGION: "ap-south-1"  # AWS region of the cluster
 
 phases:
   install:
     commands:
-      - echo "Starting Docker setup..."
+      - echo "Starting setup..."
+      - echo "Installing kubectl..."
+      - curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+      - chmod +x kubectl
+      - mv kubectl /usr/local/bin/
       - echo "Logging in to Docker Hub..."
       - echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
 
@@ -24,8 +30,14 @@ phases:
       - echo "Pushing Docker image to Docker Hub..."
       - docker push $DOCKER_USERNAME/patient-record-service:latest
       - docker push $DOCKER_USERNAME/patient-record-service:$CODEBUILD_RESOLVED_SOURCE_VERSION
-      - echo "Deploying to Kubernetes..."
+      - echo "Configuring kubectl for EKS..."
+      - aws eks update-kubeconfig --region $REGION --name $CLUSTER_NAME
+      - echo "Updating deployment YAML with image tag..."
+      - sed -i "s|channa316/patient-record-service:latest|channa316/patient-record-service:$CODEBUILD_RESOLVED_SOURCE_VERSION|g" k8s-deployment.yml
+      - echo "Applying Kubernetes manifests..."
       - kubectl apply -f k8s-deployment.yml
+      - echo "Verifying deployment..."
+      - kubectl rollout status deployment/patient-record-service
 
 artifacts:
   files:
