--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,10 +2,10 @@ version: 0.2
 
 env:
   variables:
-    DOCKER_USERNAME: "channa316"  # Docker Hub username
-    DOCKER_PASSWORD: "3ezvNbGcG8EhF$m"  # Docker Hub password
-    CLUSTER_NAME: "meditrack-cluster"  # Name of the EKS cluster
-    REGION: "ap-south-1"  # AWS region of the cluster
+    DOCKER_USERNAME: "channa316"
+    DOCKER_PASSWORD: "3ezvNbGcG8EhF$m"
+    CLUSTER_NAME: "meditrack-cluster"
+    REGION: "ap-south-1"
 
 phases:
   install:
@@ -22,7 +22,6 @@ phases:
     commands:
       - echo "Building Docker image..."
       - docker build -t $DOCKER_USERNAME/patient-record-service:latest .
-      - echo "Tagging Docker image with commit hash..."
       - docker tag $DOCKER_USERNAME/patient-record-service:latest $DOCKER_USERNAME/patient-record-service:$CODEBUILD_RESOLVED_SOURCE_VERSION
 
   post_build:
@@ -32,10 +31,11 @@ phases:
       - docker push $DOCKER_USERNAME/patient-record-service:$CODEBUILD_RESOLVED_SOURCE_VERSION
       - echo "Configuring kubectl for EKS..."
       - aws eks update-kubeconfig --region $REGION --name $CLUSTER_NAME
+      - kubectl config current-context
       - echo "Updating deployment YAML with image tag..."
       - sed -i "s|channa316/patient-record-service:latest|channa316/patient-record-service:$CODEBUILD_RESOLVED_SOURCE_VERSION|g" k8s-deployment.yml
       - echo "Applying Kubernetes manifests..."
-      - kubectl apply -f k8s-deployment.yml
+      - kubectl apply -f k8s-deployment.yml --validate=false
       - echo "Verifying deployment..."
       - kubectl rollout status deployment/patient-record-service
 
