--- a/buildspec.yml
+++ b/buildspec.yml
@@ -32,6 +32,8 @@ phases:
       - echo "Configuring kubectl for EKS..."
       - aws eks update-kubeconfig --region $REGION --name $CLUSTER_NAME
       - kubectl config current-context
+      - echo "Applying RBAC configuration for CodeBuild..."
+      - kubectl apply -f k8s/rbac.yml
       - echo "Updating deployment YAML with image tag..."
       - sed -i "s|channa316/patient-record-service:latest|channa316/patient-record-service:$CODEBUILD_RESOLVED_SOURCE_VERSION|g" k8s-deployment.yml
       - echo "Applying Kubernetes manifests..."
