Updated to handle EKS

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,12 +29,12 @@ phases:
       - echo "Pushing Docker image to Docker Hub..."
       - docker push $DOCKER_USERNAME/patient-record-service:latest
       - docker push $DOCKER_USERNAME/patient-record-service:$CODEBUILD_RESOLVED_SOURCE_VERSION
-      - echo "Checking kubectl connectivity..."
-      - kubectl get nodes
-      - kubectl get pods
       - echo "Configuring kubectl for EKS..."
       - aws eks update-kubeconfig --region $REGION --name $CLUSTER_NAME
+      - kubectl config view
       - kubectl config current-context
+      - echo "Checking kubectl connectivity..."
+      - kubectl get nodes
       - echo "Applying RBAC configuration for CodeBuild..."
       - kubectl apply -f k8s/rbac.yml
       - echo "Updating deployment YAML with image tag..."
