Updated to handle EKS

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -36,7 +36,7 @@ phases:
       - echo "Checking kubectl connectivity..."
       - kubectl get nodes
       - echo "Applying RBAC configuration for CodeBuild..."
-      - kubectl apply -f k8s/rbac.yml
+      - kubectl apply -f rbac.yml
       - echo "Updating deployment YAML with image tag..."
       - sed -i "s|channa316/patient-record-service:latest|channa316/patient-record-service:$CODEBUILD_RESOLVED_SOURCE_VERSION|g" k8s-deployment.yml
 #      - echo "Applying Kubernetes manifests..."
@@ -48,3 +48,4 @@ artifacts:
   files:
     - k8s-deployment.yml
     - deployspec.yml
+    - k8s/rbac.yml
