--- a/deployspec.yml
+++ b/deployspec.yml
@@ -26,7 +26,7 @@ phases:
   build:
     commands:
       - echo "Applying RBAC configuration..."
-      - kubectl apply -f k8s/rbac.yml
+      - kubectl apply -f rbac.yml
       - echo "Updating Kubernetes manifests with new image tag..."
       - sed -i "s|channa316/patient-record-service:latest|channa316/patient-record-service:$CODEBUILD_RESOLVED_SOURCE_VERSION|g" k8s-deployment.yml
 
@@ -40,3 +40,4 @@ phases:
 artifacts:
   files:
     - k8s-deployment.yml
+    - rbac.yml
